--- a/index.html
+++ b/index.html
@@ -1,12 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Travel Slicing</title>
 </head>
+
 <body>
-    <h1>PPMKH 2</h1>
+    <header>
+        <nav class="navbar">
+            <div class="container nav-wrapper">
+                <a href="#" class="logo">Tour<span>avel.</span></a>
+                <div class="menu-wrapper">
+                    <ul class="menu">
+                        <li class="menu-item"><a href="#" class="menu-link active">Home</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">Services</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">Pricing</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">About us</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link">Contact</a></li>
+                    </ul>
+                    <a href="#" class="btn-member">Member Area</a>
+                </div>
+                <div class="menu-toggle bx bxs-grid-alt"></div>
+            </div>
+        </nav>
+
+        <section>
+            <div class="home" id="home">
+                <div class="container home-wrapper">
+                    <div class="content-left">
+                        <h1 class="heading">Make Your Trip Memorable Book With Tour<span>avel</span></h1>
+                        <p class="subheading">We have partners with several destinations that you 
+                            might feel at home there, we will guide you with our best service.</p>
+                        <div class="box-wrapper">
+                            <div class="box">
+                                <i class='bx bxs-checkbox-checked'></i>
+                                <p>Plan your trip</p>
+                            </div>
+                            <div class="box">
+                                <i class='bx bxs-checkbox-checked'></i>
+                                <p>Fly with us</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-right">
+                        
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
+
+    <script src="assets/js/main.js"></script>
 </body>
+
 </html>
